--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout out project files
         uses: actions/checkout@v2
@@ -22,7 +22,7 @@ jobs:
 
       - name: Check and release
         run: |
-          CORE_TAG_URL="https://api.github.com/repos/v2fly/v2ray-core/releases/latest"
+          CORE_TAG_URL="https://api.github.com/repos/XTLS/Xray-core/releases/latest"
           CORE_LATEST_VER=`curl -s ${CORE_TAG_URL} --connect-timeout 5 | grep 'tag_name' | cut -d\" -f4`
           if [[ ${CORE_LATEST_VER} != v* ]]; then
             CORE_LATEST_VER=v${CORE_LATEST_VER}
@@ -38,6 +38,7 @@ jobs:
             git config user.name "flyzstu"
             git config user.email "flyzstu@gmail.com"
             git commit -m "Version ${CORE_LATEST_VER}"
+            git tag -a "${CORE_LATEST_VER}" -m "Version ${CORE_LATEST_VER}"
             git remote add release "https://${{ github.actor }}:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}"
             git push -u --follow-tags release main
           fi
