--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: self-hosted
+    #runs-on: self-hosted
     steps:
       - name: Checkout out project files
         uses: actions/checkout@v2
