--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
   build:
     name: Build
     #runs-on: self-hosted
+    runs-on: ubuntu
     steps:
       - name: Checkout out project files
         uses: actions/checkout@v2
